--- a/lattice.html
+++ b/lattice.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <style>
+      body, html {
+          height: 100%;
+          margin: 0;
+          
+          justify-content: center;
+          align-items: center;
+          overflow: hidden;
+          animation: gradientAnimation 10s ease infinite;
+      }
+
+      @keyframes gradientAnimation {
+          0% {
+              background: linear-gradient(45deg, #ff6a6a, #ffcc6a);
+          }
+          50% {
+              background: linear-gradient(45deg, #005c00, #6aafff);
+          }
+          100% {
+              background: linear-gradient(45deg, #6a6aff, #ff6a6a);
+          }
+      }
+  </style>
+  </head>
   <body style="background-color: rgb(128, 162, 255)">
     <h1>lattice calculator</h1>
     <p>
@@ -8,8 +32,8 @@
       it is faster and easier and in my opinion more people should learn it.
       <br />that is why I made this calculator that will show you how to do it.
     </p>
-    <input type="number" min="1" max="999" id="num1" value="44"/>
-    <input type="number" min="1" max="999" id="num2" value="55"/>
+    <input type="number" min="1" max="99" id="num1" value="43"/>
+    <input type="number" min="1" max="99" id="num2" value="56"/>
     <input type="button" value="multiply" id="multiply" onclick="doMultiply()">
     <div><canvas
       id="myCanvas"
