Draw carry values

--- a/lattice.html
+++ b/lattice.html
@@ -1,29 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      body, html {
-          height: 100%;
-          margin: 0;
-          
-          justify-content: center;
-          align-items: center;
-          overflow: hidden;
-          animation: gradientAnimation 10s ease infinite;
-      }
-
-      @keyframes gradientAnimation {
-          0% {
-              background: linear-gradient(45deg, #ff6a6a, #ffcc6a);
-          }
-          50% {
-              background: linear-gradient(45deg, #005c00, #6aafff);
-          }
-          100% {
-              background: linear-gradient(45deg, #6a6aff, #ff6a6a);
-          }
-      }
-  </style>
+    
   </head>
   <body style="background-color: rgb(128, 162, 255)">
     <h1>lattice calculator</h1>
@@ -42,5 +20,6 @@
       style="border: 3px solid #adfeb2"
     ></canvas></div>
     <script src="./js/index.js"></script>
+    <script src="./js/gradiant.js"></script>
   </body>
 </html>
